# attackmate-client

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  attackmate_client.py  client.py  mkdocs.yml  playbook.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-docs.yml  python-app.yml
docs/: cli-examples.md  cli-overview.md  client-examples.md  client.md  index.md  installation.md  quickstart.md
main/: 404.html  docs-requirements.txt  index.html  search.html  sitemap.xml
main/cli-examples/: index.html
main/cli-overview/: index.html
main/client/: index.html
main/client-examples/: index.html
main/installation/: index.html
main/license/: index.html
main/quickstart/: index.html
main/search/: search_index.json
src/attackmate_client/: __init__.py  attackmate_client.py  cli.py
test/units/: test_client.py
