[project]
name = "attackmate-client"
description = "Client Class for remote control and execution of AttackMate instances."
authors = [
    {name = "Thorina Boenke", email = "thorina.boenke@ait.ac.at"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}

dependencies = [
    "httpx",
    "prek>=0.3.2",
    "PyYAML",
]

[dependency-groups]
dev = [
    "prek>=0.2.8",
    "pytest>=8.4.1",
    "pytest-mock",
    "pytest-cov>=6.2.1",
    "types-requests",
]

dynamic = ["version"]

[project.scripts]
attackmate-client = "main:app"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "attackmate_client.metadata.__version__"}

[tool.flake8]
max-line-length = 110
extend-ignore = ["E203", "W503"]
